stop at2x mixin from loading 2x assets on IE8 update respond.min.js to latest

--- a/res/less/variables.less
+++ b/res/less/variables.less
@@ -145,25 +145,28 @@
 //
 .at2x(@path, @w, @h) {
     @highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
+    @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
+
+    @media @highdpi {
+        background-image: url("@{at2x_path}");
+    }
+
     background-image: url(@path);
+    background-size: @w @h;
+}
+
+// Retina image helper mixin that allows you to specify different images for different device widths */
+.at2x(@path, @w, @h, @device-width) {
+    @highdpi: ~"(min-width:@{device-width}) and (-webkit-min-device-pixel-ratio: 1.5), (min-width:@{device-width}) and (min--moz-device-pixel-ratio: 1.5), (min-width:@{device-width}) and (-o-min-device-pixel-ratio: 3/2), (min-width:@{device-width}) and (min-resolution: 1.5dppx)";
     @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
 
     @media @highdpi {
         background-image: url("@{at2x_path}");
         background-size: @w @h;
     }
-}
 
-// Retina image helper mixing that allows you to specify different images for different device widths
-.at2x(@path, @w, @h, @device-width) {
-    @highdpi: ~"(min-width:@{device-width}) and (-webkit-min-device-pixel-ratio: 1.5), (min-width:@{device-width}) and (min--moz-device-pixel-ratio: 1.5), (min-width:@{device-width}) and (-o-min-device-pixel-ratio: 3/2), (min-width:@{device-width}) and (min-resolution: 1.5dppx)";
     @media (min-width:@device-width) {
         background-image: url(@path);
-    }
-    @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
-
-    @media @highdpi {
-        background-image: url("@{at2x_path}");
         background-size: @w @h;
     }
 }
